--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 
 <body >
-    <h1 align="center">Convert Temperature </h1>
+    <h1 align="center">Convert Temperature from Kelvin to Celcius</h1>
     <hr>
     <main >
         <br>
